syntax = "proto3";

package asset;

option go_package = "internal-support-system/proto/asset";

service AssetService {
  rpc CreateAsset(CreateAssetRequest) returns (CreateAssetResponse);
  rpc GetAsset(GetAssetRequest) returns (GetAssetResponse);
  rpc UpdateAsset(UpdateAssetRequest) returns (UpdateAssetResponse);
  rpc DeleteAsset(DeleteAssetRequest) returns (DeleteAssetResponse);
  rpc ListAssets(ListAssetsRequest) returns (ListAssetsResponse);
  rpc GetAssetsByUser(GetAssetsByUserRequest) returns (GetAssetsByUserResponse);
}

enum AssetStatus {
  AVAILABLE = 0;
  ASSIGNED = 1;
  IN_MAINTENANCE = 2;
  RETIRED = 3;
}

enum AssetType {
  LAPTOP = 0;
  DESKTOP = 1;
  MONITOR = 2;
  PHONE = 3;
  TABLET = 4;
  PERIPHERAL = 5;
  SOFTWARE_LICENSE = 6;
  OTHER = 7;
}

message Asset {
  string id = 1;
  string name = 2;
  AssetType type = 3;
  string brand = 4;
  string model = 5;
  string serial_number = 6;
  string purchase_date = 7;
  double purchase_price = 8;
  AssetStatus status = 9;
  string assigned_to = 10;
  string assigned_date = 11;
  string location = 12;
  string notes = 13;
  string created_at = 14;
  string updated_at = 15;
}

message CreateAssetRequest {
  string name = 1;
  AssetType type = 2;
  string brand = 3;
  string model = 4;
  string serial_number = 5;
  string purchase_date = 6;
  double purchase_price = 7;
  string location = 8;
  string notes = 9;
}

message CreateAssetResponse {
  Asset asset = 1;
}

message GetAssetRequest {
  string id = 1;
}

message GetAssetResponse {
  Asset asset = 1;
}

message UpdateAssetRequest {
  string id = 1;
  string name = 2;
  AssetType type = 3;
  string brand = 4;
  string model = 5;
  string serial_number = 6;
  string purchase_date = 7;
  double purchase_price = 8;
  AssetStatus status = 9;
  string location = 10;
  string notes = 11;
}

message UpdateAssetResponse {
  Asset asset = 1;
}

message DeleteAssetRequest {
  string id = 1;
}

message DeleteAssetResponse {
  bool success = 1;
}

message ListAssetsRequest {
  int32 page = 1;
  int32 page_size = 2;
  AssetType type = 3;
  AssetStatus status = 4;
  string location = 5;
}

message ListAssetsResponse {
  repeated Asset assets = 1;
  int32 total = 2;
  int32 page = 3;
  int32 page_size = 4;
}

message GetAssetsByUserRequest {
  string user_id = 1;
}

message GetAssetsByUserResponse {
  repeated Asset assets = 1;
} 